# dynagrad

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: simple.rs
src/: autograd.rs  core.rs  lib.rs  ricci.rs  valtype.rs
tests/: test_autograd.rs
