[package]
name = "dynagrad"
version = "0.3.0"
authors = ["Yuan Liu <yuan6liu@gmail.com>"]
edition = "2018"
description = "Dynamic Auto-differentiation."
repository = "https://github.com/clearlycloudy/dynagrad/"
keywords = [ "autograd", "auto-differentiation" ]
license = "BSD-2-Clause"
documentation = "https://docs.rs/dynagrad/"
readme = "README.md"

[dependencies]
# rand = "0.5.5"
# chrono = "0.4.0"
# num = "0.1.41"
# crossbeam = "0.4.1"
# ndarray = "0.12.1"
lazy_static = "1.3.0"

[lib]
name = "dyncomp"
path = "src/lib.rs"
