[package]
name = "dynagrad"
version = "0.4.1"
authors = ["Yuan Liu <yuan6liu@gmail.com>"]
edition = "2018"
description = "Dynamic Auto-differentiation."
repository = "https://github.com/clearlycloudy/dynagrad/"
keywords = [ "autograd", "auto-differentiation" ]
license = "BSD-2-Clause"
documentation = "https://docs.rs/dynagrad/"
readme = "README.md"

[dependencies]
lazy_static = "1.3.0"
ndarray = "0.12.1"
num-traits = "0.2.6"
# ndarray-linalg = { version = "0.11", features = ["openblas"] }
gnuplot = "0.0.32"

[dev-dependencies]
ndarray-rand = "0.9.0"
rand="0.6"

[lib]
name = "dynagrad"
path = "src/lib.rs"

[[bin]]
name = "eg_simple"
path = "examples/simple.rs"
